--- a/content/become_committer.html
+++ b/content/become_committer.html
@@ -181,8 +181,57 @@ Apache Software Foundation
 </nav>
 <script>var phoneBtn=document.getElementById('phoneBtn'),mask=document.getElementById('nav_mask'),header_mobile,header;phoneBtn.addEventListener('click',function(b){var a=mask.style.display!=='none';phoneBtn.className=a?'phoneBtn':'phoneBtn closeBtn',mask.style.display=a?'none':' block'}),mask.addEventListener('click',function(a){phoneBtn.className='phoneBtn',mask.style.display='none'}),header_mobile=document.getElementById('header_mobile'),header_mobile.addEventListener('click',function(a){var c=a.target.className,b,d;c==="navLink navLinkWithChild"&&(b=a.target.parentNode,d=b.className!=='navItem',b.className=d?'navItem':'navItem openNavItem')}),header=document.getElementById('header'),window.onscroll=function(){var a=document.documentElement.scrollLeft||document.body.scrollLeft;header.style.left=-a+'px'}</script>
 <div class=container>
-<h1>Become A Committer of Apache Kyuubi</h1>
+<h1>Current committers</h1>
 <p><img src=https://svn.apache.org/repos/asf/comdev/project-logos/originals/kyuubi-1.svg alt="Kyuubi logo" width=30% align=right></p>
+<table border=0>
+<thead>
+<tr>
+<th>Name</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Akira Ajisaka</td>
+</tr>
+<tr>
+<td>Cheng Pan</td>
+</tr>
+<tr>
+<td>Dongdong Hong</td>
+</tr>
+<tr>
+<td>Duo Zhang</td>
+</tr>
+<tr>
+<td>Fei Wang</td>
+</tr>
+<tr>
+<td>Fu Chen</td>
+</tr>
+<tr>
+<td>Hongxiang Jiang</td>
+</tr>
+<tr>
+<td>Jeff Zhang</td>
+</tr>
+<tr>
+<td>Kent Yao</td>
+</tr>
+<tr>
+<td>Nicholas Jiang</td>
+</tr>
+<tr>
+<td>Vino Yang</td>
+</tr>
+<tr>
+<td>Willem Ning Jiang</td>
+</tr>
+<tr>
+<td>Xiduo You</td>
+</tr>
+</tbody>
+</table>
+<h2 id=become-a-committer-of-apache-kyuubi>Become A Committer of Apache Kyuubi</h2>
 <p>Anyone being supportive of the community and working in any of the
 CoPDoC areas can become an Apache Kyuubi committer. The CoPDoC is an
 acronym from ASF to describe how we recognize your contributions not
