--- a/content/improvement-proposals.html
+++ b/content/improvement-proposals.html
@@ -182,35 +182,35 @@ Apache Software Foundation
 <script>var phoneBtn=document.getElementById('phoneBtn'),mask=document.getElementById('nav_mask'),header_mobile,header;phoneBtn.addEventListener('click',function(b){var a=mask.style.display!=='none';phoneBtn.className=a?'phoneBtn':'phoneBtn closeBtn',mask.style.display=a?'none':' block'}),mask.addEventListener('click',function(a){phoneBtn.className='phoneBtn',mask.style.display='none'}),header_mobile=document.getElementById('header_mobile'),header_mobile.addEventListener('click',function(a){var c=a.target.className,b,d;c==="navLink navLinkWithChild"&&(b=a.target.parentNode,d=b.className!=='navItem',b.className=d?'navItem':'navItem openNavItem')}),header=document.getElementById('header'),window.onscroll=function(){var a=document.documentElement.scrollLeft||document.body.scrollLeft;header.style.left=-a+'px'}</script>
 <div class=container>
 <h1>Kyuubi Project Improvement Proposals (KPIP)</h1>
-<p>The purpose of a KBIP is to inform and involve the user community in significant improvements to the Kyuubi codebase throughout the development process to increase user needs.</p>
-<p>KBIPs should be used for significant user-facing or cross-cutting changes, not minor incremental improvements. When in doubt, if a committer thinks a change needs a KBIP, it does.</p>
-<h2 id=what-is-a-kbip>What is a KBIP?</h2>
-<p>A KBIP is similar to a product requirement document commonly used in product management.</p>
-<p>A KBIP:</p>
+<p>The purpose of a KPIP is to inform and involve the user community in significant improvements to the Kyuubi codebase throughout the development process to increase user needs.</p>
+<p>KPIPs should be used for significant user-facing or cross-cutting changes, not minor incremental improvements. When in doubt, if a committer thinks a change needs a KPIP, it does.</p>
+<h2 id=what-is-a-kpip>What is a KPIP?</h2>
+<p>A KPIP is similar to a product requirement document commonly used in product management.</p>
+<p>A KPIP:</p>
 <ul>
-<li>Is a ticket labeled “KBIP” proposing a major improvement or change to Kyuubi</li>
+<li>Is a ticket labeled “KPIP” proposing a major improvement or change to Kyuubi</li>
 <li>Follows the template defined below</li>
 <li>Includes discussions on the ticket about the proposal</li>
 </ul>
 <h2 id=who>Who?</h2>
-<p>Any <strong>community member</strong> can help by discussing whether a KBIP is likely to meet their needs and propose KBIPs.</p>
-<p><strong>Contributors</strong> can help by discussing whether a KBIP is likely to be technically feasible.</p>
-<p><strong>Committers</strong> can help by discussing whether a KBIP aligns with long-term project goals, and by shepherding KBIPs.</p>
-<p><strong>KBIP Author</strong> is any community member who authors a KBIP and is committed to pushing the change through the entire process. KBIP authorship can be transferred.</p>
-<p><strong>KBIP Shepherd</strong> is a PMC member who is committed to shepherding the proposed change throughout the entire process. Although the shepherd can delegate or work with other committers in the development process, the shepherd is ultimately responsible for the success or failure of the KBIP. Responsibilities of the shepherd include, but are not limited to:</p>
+<p>Any <strong>community member</strong> can help by discussing whether a KPIP is likely to meet their needs and propose KPIPs.</p>
+<p><strong>Contributors</strong> can help by discussing whether a KPIP is likely to be technically feasible.</p>
+<p><strong>Committers</strong> can help by discussing whether a KPIP aligns with long-term project goals, and by shepherding KPIPs.</p>
+<p><strong>KPIP Author</strong> is any community member who authors a KPIP and is committed to pushing the change through the entire process. KPIP authorship can be transferred.</p>
+<p><strong>KPIP Shepherd</strong> is a PMC member who is committed to shepherding the proposed change throughout the entire process. Although the shepherd can delegate or work with other committers in the development process, the shepherd is ultimately responsible for the success or failure of the KPIP. Responsibilities of the shepherd include, but are not limited to:</p>
 <ul>
 <li>Be the advocate for the proposed change</li>
 <li>Help push forward on design and achieve consensus among key stakeholders</li>
 <li>Review code changes, making sure the change follows project standards</li>
 <li>Get feedback from users and iterate on the design & implementation</li>
-<li>Uphold the quality of the changes, including verifying whether the changes satisfy the goal of the KBIP and are absent of critical bugs before releasing them</li>
+<li>Uphold the quality of the changes, including verifying whether the changes satisfy the goal of the KPIP and are absent of critical bugs before releasing them</li>
 </ul>
-<h2 id=kbip-process>KBIP Process</h2>
-<h3 id=proposing-a-kbip>Proposing a KBIP</h3>
-<p>Anyone may propose a KBIP, using the document template below. Please only submit a KBIP if you are willing to help, at least with discussion.</p>
-<p>If a KBIP is too small or incremental and should have been done through the normal JIRA process, a committer should remove the KBIP label.</p>
-<h3 id=kbip-document-template>KBIP Document Template</h3>
-<p>A KBIP document is a short document with a few questions, inspired by the Heilmeier Catechism:</p>
+<h2 id=kpip-process>KPIP Process</h2>
+<h3 id=proposing-a-kpip>Proposing a KPIP</h3>
+<p>Anyone may propose a KPIP, using the document template below. Please only submit a KPIP if you are willing to help, at least with discussion.</p>
+<p>If a KPIP is too small or incremental and should have been done through the normal JIRA process, a committer should remove the KPIP label.</p>
+<h3 id=kpip-document-template>KPIP Document Template</h3>
+<p>A KPIP document is a short document with a few questions, inspired by the Heilmeier Catechism:</p>
 <ul>
 <li>
 <p>Q1. What are you trying to do? Articulate your objectives using absolutely no jargon.</p>
@@ -246,10 +246,10 @@ Apache Software Foundation
 <p>Appendix C. Optional Rejected Designs: What alternatives were considered? Why were they rejected? If no alternatives have been considered, the problem needs more thought.</p>
 </li>
 </ul>
-<h3 id=discussing-a-kbip>Discussing a KBIP</h3>
-<p>All discussions of a KBIP should take place in a public forum, preferably the discussion attached to the ticket. Any discussion that happen offline should be made available online for the public via meeting notes summarizing the discussions.</p>
-<h3 id=implementing-a-kbip>Implementing a KBIP</h3>
-<p>Implementation should take place via the <a href=issue_tracking.html>contribution guidelines</a>. Changes that require KBIPs typically also require design documents to be written and reviewed.</p>
+<h3 id=discussing-a-kpip>Discussing a KPIP</h3>
+<p>All discussions of a KPIP should take place in a public forum, preferably the discussion attached to the ticket. Any discussion that happen offline should be made available online for the public via meeting notes summarizing the discussions.</p>
+<h3 id=implementing-a-kpip>Implementing a KPIP</h3>
+<p>Implementation should take place via the <a href=issue_tracking.html>contribution guidelines</a>. Changes that require KPIPs typically also require design documents to be written and reviewed.</p>
 </div>
 <footer class=footer>
 <div class=footerBox>
