--- a/content/zh/issue_tracking.html
+++ b/content/zh/issue_tracking.html
@@ -210,8 +210,8 @@ Apache Software Foundation
 <h1>问题追踪</h1>
 <p><img src="https://svn.apache.org/repos/asf/comdev/project-logos/originals/kyuubi-1.svg" alt="Kyuubi logo" width="30%" align="right"></p>
 <p>Kyuubi 社区使用 <a href="https://github.com/apache/incubator-kyuubi/issues">Github Issues</a> 来跟踪各种想法、工作、bug等。
-与我们的 <a href="https://github.com/apache/incubator-kyuubi">存储库</a> 集成的 Github Issues 可以更轻松地组织工作、专注于基本任务并同时更新计划。</p>
-<p>尽管只要有 Github 帐户，就可以创建创建包含任何内容的问题，并且我们不对本部分的功能进行任何强制限制，但所有交流均需遵守 ASF <a href="https://www.apache.org/foundation/policies/conduct">行为准则</a>。
+与我们的 <a href="https://github.com/apache/incubator-kyuubi">代码库</a> 集成的 Github Issues 可以更轻松地组织工作, 专注于基本任务并同时更新计划。</p>
+<p>尽管只要有 Github 帐户，就可以创建包含任何内容的问题，并且我们不对本部分的功能进行任何强制限制，但所有交流均需遵守 ASF <a href="https://www.apache.org/foundation/policies/conduct">行为准则</a>。
 如果你发现有违反这些规则的行为，可参照 <a href="https://www.apache.org/foundation/policies/conduct#reporting-guidelines">ASF 报告指南</a> 处理。</p>
 <h2 id="如何使用-github-issues">如何使用 Github Issues</h2>
 <p>本节不包含 Github 问题本身的任何特定功能，你可以从 Github 的文档中快速学习。</p>
@@ -224,7 +224,7 @@ Apache Software Foundation
 <p>如果错误的报告中有关于如何引入错误、提交或版本等详细的描述那再好不过了，因为这对审查者理解错误非常有帮助。</p>
 <p>使用我们的 <a href="https://github.com/apache/incubator-kyuubi/issues/new?assignees=&labels=bug&template=bug-report.yml&title=%5BBug%5D+">Bug问题模板</a> 并填写尽可能多的信息。</p>
 <h3 id="提交想法或功能请求">提交想法或功能请求</h3>
-<p>作为一个志愿者驱动的项目，想法总是受欢迎的 ;)</p>
+<p>作为一个志愿者驱动的项目，想法总是受欢迎的 :)</p>
 <p>使用 <a href="https://github.com/apache/incubator-kyuubi/issues/new?assignees=&labels=feature&template=feature-request.yml&title=%5BFEATURE%5D+">feature模板</a> 让你的建议清晰易懂：</p>
 <ul>
 <li>详细解释它是如何工作的</li>
